# Casemap-2

./: .env.example  .gitignore  README.md  app.py  internal_app.py  pyproject.toml
artifacts/contract_big/: chunks.json  graph.json  knowledge_map.html  manifest.json  sample_queries.json
artifacts/hk_criminal_hybrid/: hierarchical_graph.json  manifest.json  public_projection.json
artifacts/hk_criminal_relationship/: build_progress.json  manifest.json  monitor_report.html  monitor_report.json  relationship_graph.json  relationship_map.html  relationship_tree.html  supabase_export.sql
artifacts/hybrid_graph/: hierarchical_graph.json  manifest.json  public_projection.json
artifacts/public_relationship_graph/: manifest.json  relationship_graph.json  relationship_map.html  relationship_tree.html
data/cache/hklii/: judgment_getjudgment_lang_en_abbr_hkca_year_1980_num_214.json  judgment_getjudgment_lang_en_abbr_hkca_year_2003_num_229.json  judgment_getjudgment_lang_en_abbr_hkca_year_2004_num_39.json  judgment_getjudgment_lang_en_abbr_hkca_year_2009_num_46.json  (+21 more)
docs/: codex_workflow.md  project_handoff.md
src/casemap/: __main__.py  authority_tree_data.py  criminal_graph.py  criminal_law_data.py  domain_graph.py  hklii_crawler.py  hybrid_graph.py  internal_viewer.py  relationship_graph.py  source_parser.py  supabase_sync.py  viewer.py
tests/: test_app_routes.py  test_criminal_graph.py  test_determinator_logic.py  test_embeddings.py  test_hybrid_graph.py  test_neo4j_runtime.py  test_rag_accuracy_fix.py  test_supabase_sync.py
